fixed alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -104,7 +104,7 @@ body {
 
 .recent-works {
   width: 100%;
-  height: 3250px;
+  height: 3125px;
 }
 
 .works {
@@ -148,7 +148,7 @@ body {
 .project-name{
   width: 327px;
   height: 36px;
-  font-family: 'Crete Round';
+  font-family: 'Crete Round', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 32px;
@@ -162,7 +162,7 @@ body {
 .project-para{
   width: 327px;
   height: 120px;
-  font-family: 'Inter';
+  font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -197,7 +197,7 @@ body {
 .lang-css {
   width: 49px;
   height: 40px;
-  font-family: 'Inter';
+  font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 15px;
@@ -208,7 +208,7 @@ body {
 .lang-html {
   width: 56px;
   height: 40px;
-  font-family: 'Inter';
+  font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 15px;
@@ -219,7 +219,7 @@ body {
 .lang-bootstrap{
   width: 95px;
   height: 40px;
-  font-family: 'Inter';
+  font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 15px;
@@ -230,7 +230,7 @@ body {
 .lang-Ruby {
   width: 61px;
   height: 40px;
-  font-family: 'Inter';
+  font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 15px;
@@ -250,16 +250,10 @@ body {
 .card-project-container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   width: 327px;
-  height: 386px;
+  height: 364px;
   margin: auto;
-  /* position: absolute;
-  left: 0px;
-  right: 0px;
-  top: 0px;
-  bottom: 0px; */
   margin-bottom: 1em;
   background: linear-gradient(180.45deg, rgba(38, 38, 38, 0) 0.75%, rgba(38, 38, 38, 0.9) 61.94%), url(../src/card-background.png);
 }
@@ -273,6 +267,8 @@ body {
   font-size: 32px;
   line-height: 44px;
   color: #FFFFFF;
+  margin-top: 5.5rem;
+  margin-bottom: 0;
 }
 
 .card-project-para {
@@ -284,6 +280,7 @@ body {
   font-size: 16px;
   line-height: 24px;
   color: #FFFFFF;
+  margin-bottom: 0;
 }
 
 .card-lang-container{
@@ -299,6 +296,7 @@ body {
   align-items: center;
   padding: 0px;
   gap: 12px;
+  margin-bottom: 0.5rem;
 }
 
 .card-lang-item {
@@ -335,7 +333,7 @@ body {
 .card-lang-ruby {
   width: 61px;
   height: 40px;
-  font-family: 'Inter';
+  font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 15px;
@@ -349,6 +347,7 @@ body {
   height: 48px;
   background: #FF6B00;
   margin-top: 1em;
+  border: 0;
 }
 
 .aboutme {
@@ -362,7 +361,6 @@ body {
   display: flex;
   flex-direction: column;
   width: 100%;
-  /* justify-content: center; */
   align-items: center;
   margin: auto;
   background-image: url(../src/firsthalf-bg.png);
@@ -373,7 +371,7 @@ body {
 .firsthalf-title {
   width: 327px;
   height: 79px;
-  font-family: 'Crete Round';
+  font-family: 'Crete Round', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 72px;
@@ -387,7 +385,7 @@ body {
 .firsthalf-para {
   width: 327px;
   height: 148px;
-  font-family: 'Inter';
+  font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -398,13 +396,11 @@ body {
 }
 
 .firsthalf-button {
-  align-items: center;
-  padding: 12px;
   gap: 10px;
   width: 161px;
   height: 48px;
   background: #FF6B00;
-  font-family: 'Inter';
+  font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 17px;
@@ -435,7 +431,7 @@ body {
   gap: 12px;
   width: 225.46px;
   height: 41.46px;
-  font-family: 'InaiMathi';
+  font-family: 'InaiMathi', sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 32px;
@@ -454,7 +450,7 @@ body {
   padding: 12px 0px;
   width: 114px;
   height: 24px;
-  font-family: 'Inter';
+  font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 22px;
@@ -474,7 +470,7 @@ body {
   padding: 12px 0;
   width: 70px;
   height: 24px;
-  font-family: 'Inter';
+  font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 22px;
@@ -495,7 +491,7 @@ body {
   padding: 12px 0px;
   width: 70px;
   height: 24px;
-  font-family: 'Inter';
+  font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 22px;
@@ -514,7 +510,7 @@ body {
   width: 55px;
   height: 24px;
   padding: 12px 0px;
-  font-family: 'Inter';
+  font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 22px;
@@ -538,7 +534,7 @@ body {
   height: 24px;
   align-items: center;
   padding: 12px 0;
-  font-family: 'Inter';
+  font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 22px;
@@ -607,7 +603,7 @@ body {
   height: 24px;
   align-items: center;
   padding: 12px 0;
-  font-family: 'Inter';
+  font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 22px;
